Style course review form and hook up model to inputs.

--- a/Assets/css/layout.css
+++ b/Assets/css/layout.css
@@ -87,6 +87,10 @@ textarea {
     justify-content: center;
 }
 
+.justify-content-between {
+    justify-content: space-between;
+}
+
 .align-items-center {
     align-items: center;
 }
