--- a/Views/Review/Partials/_CourseFormPartial.cshtml
+++ b/Views/Review/Partials/_CourseFormPartial.cshtml
@@ -1,11 +1,11 @@
 ﻿@using Advisor.Models
 @model Review
 
-<form method="post">
+<form method="post" action="@Url.RouteUrl("review_course")">
     <div class="col-sm-6 mt-20">
         <div class="form-group">
             <label for="university">Select university</label>
-            <select class="form-control m-w-unset" id="university">
+            <select class="form-control m-w-unset university-select" id="university">
                 <option selected disabled hidden>University</option>
                 @foreach (University uni in ViewBag.Universities)
                 {
@@ -16,7 +16,7 @@
 
         <div class="form-group">
             <label for="program">Select study program</label>
-            <select class="form-control m-w-unset" id="program">
+            <select class="form-control m-w-unset program-select" id="program">
                 <option selected disabled hidden>Study program</option>
                 @foreach (StudyProgram program in ViewBag.StudyPrograms)
                 {
@@ -27,11 +27,11 @@
 
         <div class="form-group">
             <label for="course">Select course</label>
-            <select class="form-control m-w-unset" id="course">
+            <select class="form-control m-w-unset course-select" id="course" name="course">
                 <option selected disabled hidden>Course</option>
-                @for (int i = 0; i < 5; i++)
+                @foreach (Course course in ViewBag.Courses)
                 {
-                    <option>Course @i</option>
+                    <option value="@course.Id">@course.Title</option>
                 }
             </select>
         </div>
@@ -104,6 +104,6 @@
     </div>
     <div class="col-sm-12">
         @Html.TextArea("Text", new { @class = "form-control review-textarea w-100 m-w-unset", @placeholder = "Enter your review... ", @rows = 5 })
-        <button id="review-submit" type="submit" class="btn btn-primary mt-20 w-100">Submit</button>
+        <button id="course-review-submit" type="submit" class="btn btn-primary mt-20 w-100">Submit</button>
     </div>
 </form>
