--- a/Views/Review/Partials/_LecturerFormPartial.cshtml
+++ b/Views/Review/Partials/_LecturerFormPartial.cshtml
@@ -1,96 +1,89 @@
 ﻿@using Advisor.Models
+@model Review
 
-<div class="container">
-    <div class="row">
-        <div class="review-container">
-            <div class="col-sm-6 mt-20">
-                <!--University select-->
-                <label for="university-select-lecturer">Select university</label>
-                <select class="selectpicker form-control" id="university-select-lecturer">
-                    <option value="" selected disabled hidden>Please select</option>
-                    @foreach (University uni in ViewBag.Universities)
-                    {
-                        <option>@uni.Title</option>
-                    }
-                </select>
-                <!--Faculty select-->
-                <div class="mt-20">
-                    <label for="faculty-select-lecturer">Select faculty</label>
-                    <select class="selectpicker form-control" id="faculty-select-lecturer">
-                        <option value="" selected disabled hidden>Please select</option>
-                        <!--TODO: add real options-->
-                        @for (int i = 0; i < 5; i++)
-                        {
-                            <option>Faculty @i</option>
-                        }
-                    </select>
-                </div>
-                <!--Lecturer select-->
-                <div class="mt-20">
-                    <label for="lecturer-select">Select lecturer</label>
-                    <select class="selectpicker form-control" id="lecturer-select">
-                        <option value="" selected disabled hidden>Please select</option>
-                        <!--TODO: add real options-->
-                        @for (int i = 0; i < 5; i++)
-                        {
-                            <option>Lecturer @i</option>
-                        }
-                    </select>
-                </div>
+<form method="post" action="@Url.RouteUrl("review_lecturer")">
+    <div class="col-sm-6 mt-20">
+        <div class="form-group">
+            <label for="university">Select university</label>
+            <select name="university" class="form-control m-w-unset" id="lecturer-university">
+                <option selected disabled hidden>University</option>
+                @foreach (University uni in ViewBag.Universities)
+                {
+                    <option value="@uni.Id">@uni.Title</option>
+                }
+            </select>
+        </div>
+
+        <div class="form-group">
+            <label for="lecturer">Select lecturer</label>
+            <select name="lecturer" class="form-control m-w-unset" id="lecturer">
+                <option selected disabled hidden>Lecturer</option>
+                @foreach (Lecturer lecturer in ViewBag.Lecturers)
+                {
+                    <option value="@lecturer.Id">@lecturer.Name</option>
+                }
+            </select>
+        </div>
+    </div>
+    <div class="col-sm-6 mt-20">
+        <div class="form-group">
+            <label for="overall-input">Overall rating</label>
+            <div class="stars" id="overall">
+                @Html.TextBoxFor(r => r.OveralRating, new { @type = "hidden", id = "overall-input" })
+                @for (int i = 0; i < 10; i++)
+                {
+                    <span onclick="handleRating(this, 'OVERALL')" id="@i" class="fa fa-star"></span>
+                }
             </div>
-            <div class="col-sm-6 mt-20">
-                <!--Overall rating-->
-                <label for="stars">Overall rating</label>
-                <div class="stars">
-                    @for (int i = 0; i < 10; i++)
-                    {
-                        <span onclick="starmark(this)" id="@i+overallLecturer" class="fa fa-star "></span>
-                    }
-                </div>
-                <!--Personality-->
-                <label class="mt-20" for="stars">Personality</label>
-                <div class="stars">
-                    @for (int i = 0; i < 10; i++)
-                    {
-                        <span onclick="starmark(this)" id="@i+personalityLecturer" class="fa fa-star "></span>
-                    }
-                </div>
-                <!--Competence-->
-                <label class="mt-20" for="stars">Competence</label>
-                <div class="stars">
-                    @for (int i = 0; i < 10; i++)
-                    {
-                        <span onclick="starmark(this)" id="@i+CompetenceLecturer" class="fa fa-star "></span>
-                    }
-                </div>
-                <!--Delivery-->
-                <label class="mt-20" for="stars">Delivery</label>
-                <div class="stars">
-                    @for (int i = 0; i < 10; i++)
-                    {
-                        <span onclick="starmark(this)" id="@i+deliveryLecturer" class="fa fa-star "></span>
-                    }
-                </div>
-                <!--Interesting ...-->
-                <div class="slidecontainer mt-20">
-                    <span class="slider-span">Uninteresting</span>
-                    <span class="slider-span-right" style="float:right">Interesting</span>
-                    <input type="range" min="1" max="100" class="slider">
-                </div>
-                <!--Strictness-->
-                <div class="slidecontainer mt-20">
-                    <span class="slider-span">Lenient</span>
-                    <span class="slider-span-right" style="float:right">Strict</span>
-                    <input type="range" min="1" max="100" class="slider">
-                </div>
+        </div>
+
+        <div class="form-group">
+            <label for="personality-input">Personality</label>
+            <div class="stars" id="personality">
+                @Html.TextBoxFor(r => r.Personality, new { @type = "hidden", id = "personality-input" })
+                @for (int i = 0; i < 10; i++)
+                {
+                    <span onclick="handleRating(this, 'PERSONALITY')" id="@i" class="fa fa-star"></span>
+                }
             </div>
-            <div class="col-sm-12 mt-20">
-                <!--Review textarea-->
-                <textarea class="review-textarea mt-20" id="review-text-course" placeholder="Enter your review"></textarea>
-                <!--Submit button-->
-                <button type="button" class="btn btn-info sub" id="course-submit-btn">Submit</button>
+        </div>
+
+        <div class="form-group">
+            <label for="competence-input">How competent is the lecturer?</label>
+            <div class="stars" id="competence">
+                @Html.TextBoxFor(r => r.Competence, new { @type = "hidden", id = "competence-input" })
+                @for (int i = 0; i < 10; i++)
+                {
+                    <span onclick="handleRating(this, 'COMPETENCE')" id="@i" class="fa fa-star"></span>
+                }
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label for="delivery-input">How well lecturer delivers information?</label>
+            <div class="stars" id="delivery">
+                @Html.TextBoxFor(r => r.Delivery, new { @type = "hidden", id = "delivery-input" })
+                @for (int i = 0; i < 10; i++)
+                {
+                    <span onclick="handleRating(this, 'DELIVERY')" id="@i" class="fa fa-star"></span>
+                }
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label for="strictness-input">How strict is the lecturer?</label>
+            <div class="stars" id="strictness">
+                @Html.TextBoxFor(r => r.Strictness, new { @type = "hidden", id = "strictness-input" })
+                @for (int i = 0; i < 10; i++)
+                {
+                    <span onclick="handleRating(this, 'STRICTNESS')" id="@i" class="fa fa-star"></span>
+                }
             </div>
         </div>
     </div>
-</div>
 
+    <div class="col-sm-12">
+        @Html.TextArea("Text", new { @class = "form-control review-textarea w-100 m-w-unset", @placeholder = "Enter your review... ", @rows = 5 })
+        <button id="lecturer-review-submit" type="submit" class="btn btn-primary mt-20 w-100">Submit</button>
+    </div>
+</form>
