Fix slider width.

--- a/Assets/css/layout.css
+++ b/Assets/css/layout.css
@@ -26,6 +26,10 @@ textarea {
     max-width: 280px;
 }
 
+.mt-5 {
+    margin-top: 5px;
+}
+
 .mt-20 {
     margin-top: 20px;
 }
@@ -56,6 +60,10 @@ textarea {
 
 .m-w-unset {
     max-width: unset;
+}
+
+.m-w-300 {
+    max-width: 300px;
 }
 
 .m-auto {
