--- a/Views/Review/Partials/_CourseFormPartial.cshtml
+++ b/Views/Review/Partials/_CourseFormPartial.cshtml
@@ -93,12 +93,12 @@
         </div>
 
         <div class="form-group slider-container mt-20">
-            <div class="d-flex justify-content-between">
+            <div class="d-flex justify-content-between m-w-300">
                 <p class="slider-span m-0">Theory</p>
                 <p class="slider-span m-0">Practice</p>
             </div>
             <div>
-                @Html.TextBoxFor(r => r.TheoryPercentage, new { @type = "range", @class = "slider m-w-unset", @min = 0, @max = 100 })
+                @Html.TextBoxFor(r => r.TheoryPercentage, new { @type = "range", @class = "slider m-w-300 mt-5", @min = 0, @max = 100 })
             </div>
         </div>
     </div>
