--- a/Assets/css/review.css
+++ b/Assets/css/review.css
@@ -1,38 +1,19 @@
-﻿ textarea {
-    max-width: 900px !important;
-    margin-left: 0px;
-}
-
-#review-text {
+﻿#review-text {
     height: 190px;
     width: 100%;
     resize: none;
 }
+
 .review-textarea {
     height: 190px;
-    width: 100%;
     resize: none;
 }
 
-.selectpicker form-control{
-    width: 200px;
-}
-
-.sub {
-    width: 280px;
-    margin-top: 20px;
-}
-
-.review-container{
-    margin-left: 100px;
-}
-
-.stars{
+.stars {
     font-size: 19px;
 }
 
-.slidecontainer{
-    width: 50%;
+.slider-container {
     font-weight: bold;
 }
 
@@ -48,29 +29,21 @@
     transition: opacity .2s;
 }
 
-.slider::-webkit-slider-thumb {
-    -webkit-appearance: none;
-    appearance: none;
-    width: 25px;
-    height: 25px;
-    border-radius: 50%;
-    background: black;
-    cursor: pointer;
-}
+    .slider::-webkit-slider-thumb {
+        -webkit-appearance: none;
+        appearance: none;
+        width: 25px;
+        height: 25px;
+        border-radius: 50%;
+        background: black;
+        cursor: pointer;
+    }
 
-.slider::-moz-range-thumb {
-    width: 25px;
-    height: 25px;
-    border-radius: 50%;
-    background: black;
-    cursor: pointer;
-}
+    .slider::-moz-range-thumb {
+        width: 25px;
+        height: 25px;
+        border-radius: 50%;
+        background: black;
+        cursor: pointer;
+    }
 
-.slider-span-right{
-    float: right !important;
-    padding-bottom: 5px;
-}
-
-.slider-span {
-    padding-bottom: 5px;
-}
