Handle saving file into folder and into DB.

--- a/Views/University/UniversityList.cshtml
+++ b/Views/University/UniversityList.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewBag.Title = "Universities";
 }
-<div class="w-100 mt-100">
+<div class="w-100">
     <h2 class="mb-20">Which university are you interested in at the moment?</h2>
     <div class="d-flex flex-wrap mt-50">
         @foreach (University uni in ViewBag.Universities)
