--- a/Views/Course/Course.cshtml
+++ b/Views/Course/Course.cshtml
@@ -51,9 +51,15 @@
 
                 </tbody>
             </table>
-            <h3>Files (#)</h3
-            <!--Add files-->
-
+            <h3>Files (#)</h3>
+            <div>
+                <form method="post" enctype="multipart/form-data" action="@Url.RouteUrl("file_upload")">
+                    <label for="file">Choose file</label>
+                    <input type="file" name="file" id="file" />
+                    <input value="@ViewBag.Course.Id" type="hidden" name="course" id="course" />
+                    <button type="submit">Submit</button>
+                </form>
+            </div>
         </div>
         <div class="col-sm-7">
             <h3>Reviews (@ViewBag.StatsData.ReviewCount)</h3>
