--- a/Views/StudyProgram/StudyProgram.cshtml
+++ b/Views/StudyProgram/StudyProgram.cshtml
@@ -81,7 +81,9 @@
                                 <p class="mr-5">
                                     <i class="fas fa-star"></i>
                                 </p>
-                                <p class="mr-5">Overall @Math.Round(course.Reviews.Average(r => r.OveralRating), 2).ToString()</p>
+                                @if (course.Reviews.Count > 0) {
+                                    <p class="mr-5">Overall @Math.Round(course.Reviews.Average(r => r.OveralRating), 2).ToString()</p>
+                                }
                             </div>
                             <div class="d-flex mr-5">
                                 <p class="mr-5">
