--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -25,6 +25,7 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="@Url.RouteUrl("universities_page")">Universities</a></li>
                     <li><a href="@Url.RouteUrl("review_page")">Leave a review!</a></li>
+                    <li><a href="@Url.RouteUrl("admin_page")">Admin</a></li> <!--laikinai-->
                 </ul>
             </div>
         </div>
