partial university view with add university link
partial view with add university link

--- a/Assets/css/admin.css
+++ b/Assets/css/admin.css
@@ -1,2 +1,21 @@
 ﻿body {
 }
+
+.university-list {
+    width: 100%;
+    height: 400px;
+    overflow: auto;
+}
+
+.university-table-container {
+    margin: auto;
+    width: 1000px;
+}
+
+.add-link {
+    color: #333;
+}
+
+.add-link:hover {
+    color: #333;
+}
