--- a/Views/Admin/Admin.cshtml
+++ b/Views/Admin/Admin.cshtml
@@ -6,19 +6,19 @@
 <h2>Admin</h2>
 <ul class="nav nav-tabs mt-20">
     <li class="active">
-        <a href="#universityTab" data-toggle="tab">University</a>
+        <a href="#universityTab" data-toggle="tab">Universities</a>
     </li>
     <li>
-        <a href="#facultyTab" data-toggle="tab">Faculty</a>
+        <a href="#facultyTab" data-toggle="tab">Faculties</a>
     </li>
     <li>
-        <a href="#studyProgramTab" data-toggle="tab">Study Program</a>
+        <a href="#studyProgramTab" data-toggle="tab">Study Programs</a>
     </li>
     <li>
-        <a href="#courseTab" data-toggle="tab">Course</a>
+        <a href="#courseTab" data-toggle="tab">Courses</a>
     </li>
     <li>
-        <a href="#lecturerTab" data-toggle="tab">Lecturer</a>
+        <a href="#lecturerTab" data-toggle="tab">Lecturers</a>
     </li>
 </ul>
 
