--- a/Views/Admin/Partials/_UniversityFormPartial.cshtml
+++ b/Views/Admin/Partials/_UniversityFormPartial.cshtml
@@ -1,19 +1,29 @@
-﻿
+﻿@using Advisor.Models
 @{
     ViewBag.Title = "_UniversityFormPartial";
 }
 
-<div class="mt-20">
-    <ul class="list-group">
-        <li class="list-group-item">
-            First item <span onclick="openForm(addUniversity)"><i class="fas fa-edit"></i></span>
-        </li>
-        <li class="list-group-item">Second item</li>
-        <li class="list-group-item">Third item</li>
-    </ul>
-</div>
-
-<a data-target="#addUniversityModal" data-toggle="modal"><h3>Add University</h3> </a>
+    <div class="university-table-container mt-20">
+        <h2>Universities</h2>
+        <div class="university-list">
+            <table class="table">
+                <tbody>
+                    @foreach (University uni in ViewBag.Universities)
+                    {
+                        <tr>
+                            <th scope="row">@uni.Title</th>
+                            <td>
+                                <span data-target="#editUniversityModal" data-toggle="modal"><i class="fas fa-edit"></i></span>
+                                <span><i class="fas fa-trash-alt"></i></span>
+                            </td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
+        <a class="add-link" data-target="#addUniversityModal" data-toggle="modal"><h3>Add University</h3> </a>
+    </div>
+ 
 <div class="modal fade" tabindex="-1" id="addUniversityModal"
      data-keyboard="false" data-backdrop="static">
     <div class="modal-dialog modal-sm">
@@ -43,3 +53,36 @@
         </div>
     </div>
 </div>
+
+<div class="modal fade" tabindex="-1" id="editUniversityModal"
+     data-keyboard="false" data-backdrop="static">
+    <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">
+                    &times;
+                </button>
+                <h4 class="modal-title">Edit University</h4>
+            </div>
+            <div class="modal-body">
+                <form>
+
+                    <div class="form-group">
+                        <label for="universityTitle">University Title</label>
+                        <input class="form-control" placeholder="Enter university title"
+                               type="text" id="universityTitle" />
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="button" class="btn btn-primary"
+                        data-dismiss="modal">
+                    Cancel
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
